<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFF3E0">

    <!-- Blokk 1: Velkommen -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/velkommen"
        android:textColor="#E65100"
        android:textSize="24sp" />

    <!-- Blokk 2: Hvordan spille -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/hvordan_spille"
        android:textColor="#F4511E"
        android:textSize="24sp" />

    <!-- Blokk 3: Funksjoner -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/funksjoner"
        android:textColor="#43A047"
        android:textSize="24sp" />

    <!-- Blokk 4: Utvikler og Kontaktinformasjon -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/utvikler"
        android:textColor="#0091EA"
        android:textSize="24sp" />

    <Button
        android:id="@+id/tilbakeKnapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:minHeight="48dp"
        android:text="@string/tilbake_til_hovedmeny3"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</LinearLayout>
