<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#E1F5FE"
    android:gravity="center">

        <!-- Start spill knapp -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        app:srcCompat="@drawable/mattemoro" />

    <Button
        android:id="@+id/startSpillKnapp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/ic_play"
        android:text="@string/start_spill"
        android:textColor="#FFFFFF" />

        <!-- Om spill knapp -->
    <Button
        android:id="@+id/omSpillKnapp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/ic_info"
        android:text="@string/om_spillet"
        android:textColor="#FFFFFF" />

    <!-- Innstillinger knapp -->
    <Button
        android:id="@+id/innstillingerKnapp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/ic_settings"
        android:text="@string/preferanser"
        android:textColor="#FFFFFF" />

</LinearLayout>
